cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09479_309003110.yaml
Resources:
  gitlabrunnervpc775A6C8F:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/Resource
  gitlabrunnervpcPublicSubnet1SubnetBEF1FAA7:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1/Subnet
  gitlabrunnervpcPublicSubnet1RouteTableEA2D2A0C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1/RouteTable
  gitlabrunnervpcPublicSubnet1RouteTableAssociationACB9A0D7:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPublicSubnet1RouteTableEA2D2A0C
      SubnetId:
        Ref: gitlabrunnervpcPublicSubnet1SubnetBEF1FAA7
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1/RouteTableAssociation
  gitlabrunnervpcPublicSubnet1DefaultRouteCC308842:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPublicSubnet1RouteTableEA2D2A0C
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: gitlabrunnervpcIGWCF29F882
    DependsOn:
      - gitlabrunnervpcVPCGWFBA84EEA
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1/DefaultRoute
  gitlabrunnervpcPublicSubnet1EIPD90936A2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1/EIP
  gitlabrunnervpcPublicSubnet1NATGateway2606E3A6:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - gitlabrunnervpcPublicSubnet1EIPD90936A2
          - AllocationId
      SubnetId:
        Ref: gitlabrunnervpcPublicSubnet1SubnetBEF1FAA7
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet1/NATGateway
  gitlabrunnervpcPublicSubnet2Subnet3136DF71:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2/Subnet
  gitlabrunnervpcPublicSubnet2RouteTableBA1C64BD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2/RouteTable
  gitlabrunnervpcPublicSubnet2RouteTableAssociationEE92F255:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPublicSubnet2RouteTableBA1C64BD
      SubnetId:
        Ref: gitlabrunnervpcPublicSubnet2Subnet3136DF71
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2/RouteTableAssociation
  gitlabrunnervpcPublicSubnet2DefaultRoute032A90FC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPublicSubnet2RouteTableBA1C64BD
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: gitlabrunnervpcIGWCF29F882
    DependsOn:
      - gitlabrunnervpcVPCGWFBA84EEA
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2/DefaultRoute
  gitlabrunnervpcPublicSubnet2EIPA1C999C1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2/EIP
  gitlabrunnervpcPublicSubnet2NATGateway50C79516:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - gitlabrunnervpcPublicSubnet2EIPA1C999C1
          - AllocationId
      SubnetId:
        Ref: gitlabrunnervpcPublicSubnet2Subnet3136DF71
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PublicSubnet2/NATGateway
  gitlabrunnervpcPrivateSubnet1SubnetE2078324:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet1/Subnet
  gitlabrunnervpcPrivateSubnet1RouteTable8895725E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet1/RouteTable
  gitlabrunnervpcPrivateSubnet1RouteTableAssociationA6E8F4D8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPrivateSubnet1RouteTable8895725E
      SubnetId:
        Ref: gitlabrunnervpcPrivateSubnet1SubnetE2078324
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet1/RouteTableAssociation
  gitlabrunnervpcPrivateSubnet1DefaultRoute4067F3AB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPrivateSubnet1RouteTable8895725E
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: gitlabrunnervpcPublicSubnet1NATGateway2606E3A6
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet1/DefaultRoute
  gitlabrunnervpcPrivateSubnet2Subnet64311492:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet2/Subnet
  gitlabrunnervpcPrivateSubnet2RouteTableC06C91E2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet2/RouteTable
  gitlabrunnervpcPrivateSubnet2RouteTableAssociationC2BDBB02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPrivateSubnet2RouteTableC06C91E2
      SubnetId:
        Ref: gitlabrunnervpcPrivateSubnet2Subnet64311492
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet2/RouteTableAssociation
  gitlabrunnervpcPrivateSubnet2DefaultRoute9B59C250:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: gitlabrunnervpcPrivateSubnet2RouteTableC06C91E2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: gitlabrunnervpcPublicSubnet2NATGateway50C79516
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/PrivateSubnet2/DefaultRoute
  gitlabrunnervpcIGWCF29F882:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-vpc
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/IGW
  gitlabrunnervpcVPCGWFBA84EEA:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
      InternetGatewayId:
        Ref: gitlabrunnervpcIGWCF29F882
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-vpc/VPCGW
  gitlabrunnersecuritygroupC7766CE0:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh, http and https access to ec2 gitlab-runner instances from anywhere
      GroupName: gitlab-runner-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow public ssh access
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: allow public https access
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: allow public http access
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: gitlabrunnervpc775A6C8F
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-security-group/Resource
  gitlabrunnerinstanceInstanceRole7AF4C673:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-instance
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-instance/InstanceRole/Resource
  gitlabrunnerinstanceInstanceProfile4E43489D:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: gitlabrunnerinstanceInstanceRole7AF4C673
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-instance/InstanceProfile
  gitlabrunnerinstanceDDD71E84:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: gitlabrunnerinstanceInstanceProfile4E43489D
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.nano
      SecurityGroupIds:
        - Fn::GetAtt:
            - gitlabrunnersecuritygroupC7766CE0
            - GroupId
      SubnetId:
        Ref: gitlabrunnervpcPrivateSubnet1SubnetE2078324
      Tags:
        - Key: Name
          Value: Ec2RunnersStack/gitlab-runner-instance
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - gitlabrunnerinstanceInstanceRole7AF4C673
    Metadata:
      aws:cdk:path: Ec2RunnersStack/gitlab-runner-instance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.71.0,@aws-cdk/aws-cloudwatch=1.71.0,@aws-cdk/aws-ec2=1.71.0,@aws-cdk/aws-events=1.71.0,@aws-cdk/aws-iam=1.71.0,@aws-cdk/aws-kms=1.71.0,@aws-cdk/aws-logs=1.71.0,@aws-cdk/aws-s3=1.71.0,@aws-cdk/aws-s3-assets=1.71.0,@aws-cdk/aws-ssm=1.71.0,@aws-cdk/cloud-assembly-schema=1.71.0,@aws-cdk/core=1.71.0,@aws-cdk/cx-api=1.71.0,@aws-cdk/region-info=1.71.0,jsii-runtime=node.js/v18.12.1
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
